feat: Premium Vintage Modern UI redesign
- Overhauled global color palette to deep dark theme with warm amber accents
- Updated typography to Courier Prime (mono) + Inter (sans) combo
- Reworked shadow system for dark glassmorphism aesthetic
- App.tsx: Restructured layout — scrollable top panel, prominent central button, minimalist bottom controls
- VoiceRecorder: Large tactile dark button with amber glow rings when active
- ResponseDisplay: Minimalist editorial dark typography and layout
- ModeSelector: Subdued glassmorphic pill selector in bottom bar
- SocialModePanel: Replaced Polaroid frame with dark dashed upload zone; added inline result display with copy button; now owns top panel exclusively in social mode
- TranslationPanel: Full dark reskin — glassmorphic inputs, amber focus glows, dark result cards

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#6366f1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#e8e4d9" />
     <meta name="description" content="Transform screenshots and voice into perfect responses. Screenshot a message, speak your thoughts, get a polished reply." />
 
     <!-- PWA -->
@@ -14,14 +14,14 @@
     <!-- Google Fonts - Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
     <!-- Preconnect to API -->
     <link rel="preconnect" href="https://generativelanguage.googleapis.com" />
 
-    <title>VibeFlow Web - Voice to Text AI</title>
+    <title>Analog Dictaphone</title>
   </head>
-  <body class="bg-slate-900 text-white antialiased">
+  <body class="bg-[#1a1a1a] text-[#2a2a2a] antialiased overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
